HelloUltraviolet/Fixtures/RejectedSource/Polymorphism/DynamicNonDispatchableRequirement/Expected.uv
//! Expected diagnostic metadata for the DynamicNonDispatchableRequirement rejected-source specimen.

expectedDiagnostic("E-TYP-2541", "req.14.DynamicDispatchDispatchableClassesOnly")
